# debater-with-crewai

./: README.md  pyproject.toml
output/: decide_winner.md  oppose_debate.md  propose_debate.md
src/debater_with_crewai/: crew.py  main.py
src/debater_with_crewai/config/: agents.yaml  tasks.yaml
