[project]
name = "debater_with_crewai"
version = "0.1.0"
description = "debater-with-crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
debater_with_crewai = "debater_with_crewai.main:run"
run_crew = "debater_with_crewai.main:run"
train = "debater_with_crewai.main:train"
replay = "debater_with_crewai.main:replay"
test = "debater_with_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
